# scout-off-backend

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  BACKEND_API_DOCS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  tsconfig.scripts.json
.claude/: settings.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  contract-ci.yml  deploy-staging.yml
__mocks__/: better-sqlite3.js  node-fetch.js
__mocks__/@paralleldrive/: cuid2.js
contracts/: Cargo.toml
contracts/connection/: Cargo.toml
contracts/connection/src/: lib.rs
contracts/progress/: Cargo.toml
contracts/progress/src/: lib.rs
contracts/register/: Cargo.toml
contracts/shared/: Cargo.toml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
db/: 001_initial.sql  002_audit_log.sql  002_contact_unlocks.sql  002_player_profile_history.sql  002_trial_offer_events.sql  002_trial_offers.sql  002_validators.sql  003_idempotency_keys.sql  003_pending_pins.sql  003_subscriptions.sql  003_subscriptions_and_trial_offers.sql  004_events_created_at.sql  004_token_revocation.sql  004_validators.sql  005_contact_unlocks.sql  006_pending_pins_hash.sql  006_scout_player_notes.sql  007_api_keys.sql  008_scout_bookmarks.sql
docs/: auth.md  tier-promotion.md
scripts/: backfill.js  backup-db.sh  deploy-staging.sh  seed.ts  validate-env.js
src/: app.ts  config.ts  index.ts  tracing.ts
tests/: config.test.ts  setup.ts
(+182 files in other folders)
