[package]
name = "connection"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
scout-off-shared = { path = "../shared" }
register = { path = "../register" }
subscription = { path = "../subscription" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
